# routes/posts.router.js
@@ -12,6 +12,7 @@ router.get("/:postId", postsController.findOnePost);
 router.put("/:postId",authMiddleware, postsController.updatePost);
 router.delete("/:postId", authMiddleware, postsController.deletePost)
 router.put("/participate/:postId", authMiddleware, postsController.participateMember)
+router.put("/confirm/:postId", authMiddleware, postsController.confirmMember)
 router.put("/ban/:postId", authMiddleware, postsController.banMember)
 router.put("/cancelBan/:postId", authMiddleware, postsController.cancelBanMember)
 router.put("/closeParty/:postId", authMiddleware, postsController.closeParty);  //파티원 모집 마감
